--- a/simple_blog/app/views/layouts/_header.html.erb
+++ b/simple_blog/app/views/layouts/_header.html.erb
@@ -1,9 +1,12 @@
-<h1>Simple Blog</h1>     
+<h1>Simple Blog++</h1>     
 <div class="row"> 
   <div class="span4 offset8">
     <span class="pull-right">
-      <%= link_to 'Audit', audit_path, class: 'btn' %> | 
-      <%= link_to 'New Article', new_article_path, class: 'btn' %>
+    <%= link_to 'Blog', articles_path, class: 'btn' %>&nbsp;&nbsp;
+      <%= link_to 'New Article', new_article_path, class: 'btn' %>&nbsp;&nbsp;
+      <%= link_to 'Audit', audits_path, class: 'btn' %>&nbsp;&nbsp;
+      
+      
     </span>
   </div>
 </div>
